--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,14 @@ akka {
   loglevel = ${?ACTOR_LOG_LEVEL}
 }
 
+mqtt {
+  host = "localhost"
+  host = ${?MQTT_HOST}
+
+  port = 1883
+  port = ${?MQTT_PORT}
+}
+
 http {
   host = "0.0.0.0"
   host = ${?HTTP_HOST}
@@ -10,6 +18,6 @@ http {
   port = 9000
   port = ${?HTTP_PORT}
 
-  timeout = 10s
+  timeout = 2s
   timeout = ${?HTTP_TIMEOUT}
 }
